--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,11 @@
     <title>Rayhana Kitchen Appliance - Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- optional fallbacks -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;700&family=Noto+Sans:wght@400;500;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600;700&family=Vazirmatn:wght@300;400;500;700&display=swap"
       rel="stylesheet"
@@ -20,7 +25,8 @@
         const endpoint = "%VITE_ANALYTICS_ENDPOINT%";
         const websiteId = "%VITE_ANALYTICS_WEBSITE_ID%";
         const hasEndpoint = endpoint && !endpoint.includes("VITE_ANALYTICS_");
-        const hasWebsiteId = websiteId && !websiteId.includes("VITE_ANALYTICS_");
+        const hasWebsiteId =
+          websiteId && !websiteId.includes("VITE_ANALYTICS_");
         if (!hasEndpoint || !hasWebsiteId) return;
         const s = document.createElement("script");
         s.defer = true;
